--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,17 +1,32 @@
 <!--detail.wxml-->
-<view class="banner-container">
-  <image src="../../images/banner.png"></image>
+
+<view class="banner-container"> 
+<swiper indicator-dots="{{indicatorDots}}"  
+        autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">  
+      <block wx:for="{{pictureUrls}}" wx:key="unique">  
+        <swiper-item>  
+            <image src="{{item}}" class="slide-image" width="100%" height="100%"/>  
+        </swiper-item>  
+      </block>  
+</swiper>
 </view>
 
+<!-- 循环modules -->
+<block  wx:for="{{modules}}" wx:key="unique">
+<template is="{{item.moduleType}}" data="{{...detail}}"/>
+</block >
+
+<!--事件投票模块 moduleType :1-->
+<template name="1">
 <view class="title-box">
   <view class="title-box-left">
      <view class="eng">Oct</view>
-     <view class="chiness">11</view>
+     <view class="chiness">{{startTime.month}}</view>
   </view>
   <view class="title-box-right">
-    <view class="right1">2017年中欧新生入学2017年中…</view>
+    <view class="right1">{{eventName}}</view>
     <view class="right2">
-    <text>浦东新区 红枫路699号</text>
+    <text>{{address}}</text>
      <image src="../../images/location1.png"></image>
     </view>
    </view>
@@ -19,50 +34,72 @@
 
 <!--分享、点赞部分-->
 <view class="share-box">
-   <view class="share-item">
-     <image src="../../images/icon5.png"></image>
+   <view class="share-item" bindtap="clickShareBtn">
+     	<image src="../../images/icon5.png"></image>     
      <view>分享</view>
    </view>
-   <view class="share-item"> <image src="../../images/icon6.png"></image>
-   <view>已参加</view>
-   </view>
-   <view class="share-item"> <image src="../../images/icon3.png"></image>
-   <view>已关注</view>
-   </view>
-   <view class="share-item">
-    <image src="../../images/icon4.png"></image>
+   <view class="share-item" bindtap="clickEnrollBtn"> 
+   <block wx:if="{{enrollData.resultData.data.hasEnrolled}}">
+     	<image src="../../images/icon6.png"></image>
+     	<view>已参加</view>
+     </block>
+     <block wx:else>
+      	<image src="../../images/icon6_before.png"></image>
+      	<view>未参加</view>
+     </block>
    
-     <view>188</view>
+   </view>
+   <view class="share-item" bindtap="clickFollowEventBtn"> 
+   <block wx:if="{{isFollow}}">
+     	<image src="../../images/icon3.png"></image>
+     	<view>已关注</view>
+     </block>
+     <block wx:else>
+      	<image src="../../images/icon3_before.png"></image>
+      	<view>未关注</view>
+     </block>
+   
+   </view>
+   <view class="share-item" bindtap="clickAddStarBtn">
+	  <block wx:if="{{isStar}}">
+	    <image src="../../images/icon4.png"></image>
+     </block>
+      <block wx:else>
+	    <image src="../../images/icon4_before.png"></image>
+     </block>
+     <view>{{starCount}}</view>
    </view>
 </view>
 
 <!--投票、地址等模块-->
-<view class="mg20">
-<view class=" model-top">
+<view class=" model-top mg20">
   <view class="model-left ">
      <image src="../../images/d-icon1.png"></image>
   </view>
   <view class="model-right">
-    <view class="right1">2017年09月01日</view>
+    <view class="right1">{{startTime.year}}年{{startTime.month}}月{{startTime.day}}日 {{startTime.hours}}</view>
     <view class="right2">
-   上午9：00-下午17：00
+  结束时间： {{endTime.year}}年{{endTime.month}}月{{endTime.day}}日  {{endTime.hours}}
     </view>
    </view>
 </view>
 
-<view class=" model-top">
+<view class=" model">
   <view class="model-left ">
      <image src="../../images/d-icon2.png" class="m-img2"></image>
   </view>
   <view class="model-right">
-    <view class="right1">浦东新区 红枫路699号</view>
-    <view class="right2">
-   骏源支行、恒源支行、暑前路支行、东晓南
-支行、天河南支行
-    </view>
+    <view class="right1">{{address}}</view>
+    
    </view>
 </view>
+</template>
+<!--详情默认模块 end-->
 
+
+
+<!--事件投票模块 moduleType :4-->
+<template name="4">
 <view class="model">
   <view class="model-left ">
      <image src="../../images/d-icon3.png"></image>
@@ -75,21 +112,25 @@
    <text class="wb_arrow_right"></text>
    </view>
 </view>
+</template>
 
+<!--问卷调查模块 moduleType:5-->
+<template name="5">
 <view class="model">
-  <view class="model-left ">
+  <view class="model-left">
      <image src="../../images/d-icon4.png"></image>
   </view>
   <view class="model-right">
     <view class="right1">问卷调查</view>
-   
    </view>
    <view class="arr">
    <text class="wb_arrow_right"></text>
    </view>
 </view>
+</template>
 
-
+<!--事件评价模块 moduleType:6-->
+<template name="6">
 <view class="model">
   <view class="model-left ">
      <image src="../../images/d-icon5.png" class="m-img5"></image>
@@ -102,7 +143,7 @@
    <text class="wb_arrow_right"></text>
    </view>
 </view>
-</view>
+</template>
 
 <!-- 上拉查看图文详情 -->
 <view class="pull-up-show-detail mg20">
@@ -111,67 +152,51 @@
   上拉查看图文详情</view>
 </view>
 <!--此处为自定义图文详情内容区-->
-<view class="detail_box">
-  <image src="../../images/pic.png"></image>
+<view class="detail_box" hidden="{{isShowBottom ? true : false}}">
+<block  wx:for="{{description.data.paragraphs}}" wx:key="unique">
+	<view wx:if="{{item.type==1}}" ><text>{{item.value}}</text></view>
+	<view wx:if="{{item.type==2}}">
+		 <image src="{{item.value}}" width="100%" height="100%"/> 
+	</view>
+</block>
 </view>
+
+<!--评论模块 ：moduleType:2-->
+<template name="2">
 <!--评论-->
 <view class="comment-container">
- <view class="comment_title">评论<text>（128）</text></view>
+ <view class="comment_title">评论<text>（{{commentData.totalCount}}）</text></view>
+
+<block  wx:for="{{commentData.commentsList}}" wx:key="unique">
  <view class="comment-box">
   <view class="comment-left">
-    <image src="../../images/icon2.png"></image>
-    <text>天涯明月刀</text>
-    <time class="fr">2017-04-11</time>
+    <image src="{{item.icon}}"></image>
+    <text>{{item.nick}}</text>
+    <time class="fr">{{item.createAt}}</time>
   </view>
   <view class="comment_cont">
-    <text>​​人工智能的时代已经到来。越来越多的AI技术改变了现代人的生活、学习和工作。中文进英文出、一边说话一边文字自动显示出来，这些技术被形容为“黑科技”，其实，包括上述技术在内的多种应用AI技术的产品已经被中国智能语音与人工智能企业科大讯飞股份有限公司（iFLYTEK Co., Ltd.）（以下简称科大讯飞）推向海外</text>
+    <text>​​{{item.content}}</text>
   </view>
   </view>
-
-  <view class="comment-box">
-  <view class="comment-left">
-    <image src="../../images/icon2.png"></image>
-    <text>天涯明月刀</text>
-    <time class="fr">2017-04-11</time>
-  </view>
-  <view class="comment_cont">
-    <text>​​人工智能的时代已经到来。越来越多的AI技术改变了现代人的生活、学习和工作。中文进英文出、一边说话一边文字自动显示出来，这些技术被形容为“黑科技”，其实，包括上述技术在内的多种应用AI技术的产品已经被中国智能语音与人工智能企业科大讯飞股份有限公司（iFLYTEK Co., Ltd.）（以下简称科大讯飞）推向海外</text>
-  </view>
-  </view>
-
-  <view class="comment-box">
-  <view class="comment-left">
-    <image src="../../images/icon2.png"></image>
-    <text>天涯明月刀</text>
-    <time class="fr">2017-04-11</time>
-  </view>
-  <view class="comment_cont">
-    <text>​​人工智能的时代已经到来。越来越多的AI技术改变了现代人的生活、学习和工作。中文进英文出、一边说话一边文字自动显示出来，这些技术被形容为“黑科技”，其实，包括上述技术在内的多种应用AI技术的产品已经被中国智能语音与人工智能企业科大讯飞股份有限公司（iFLYTEK Co., Ltd.）（以下简称科大讯飞）推向海外</text>
-    <image src="../../images/pic2.png"></image>
-  </view>
-  </view>
-
-  <view class="comment-box">
-  <view class="comment-left">
-    <image src="../../images/icon2.png"></image>
-    <text>天涯明月刀</text>
-    <time class="fr">2017-04-11</time>
-  </view>
-  <view class="comment_cont">
-    <text>​​人工智能的时代已经到来。越来越多的AI技术改变了现代人的生活、学习和工作。中文进英文出、一边说话一边文字自动显示出来，这些技术被形容为“黑科技”，其实，包括上述技术在内的多种应用AI技术的产品已经被中国智能语音与人工智能企业科大讯飞股份有限公司（iFLYTEK Co., Ltd.）（以下简称科大讯飞）推向海外</text>
-  </view>
-  </view>
+</block>
+ 
 </view>
-
 
 <!-- 查看更多评论 -->
 <view class="pull-up-show-detail">
   <view class="classname">
-  查看更多评论<text class="wb_arrow_right"></text></view>
+  <block wx:if="{{hasMore}}">
+  查看更多评论<text class="wb_arrow_right"></text>
+  </block>
+  <block wx:else>
+   没有更多评论了
+  </block>
+  </view>
 </view>
+
 <!--底部浮动评论输入框-->
 
-<view class="footer_container mg20" style=" position: relative;">
+<view class="footer_container mg20">
         <view class="foot-item comment1">
           <view class="input_box">
            <image src="../../images/c_icon3.png"></image>
@@ -182,5 +207,13 @@
           <text class="comment_num">132</text>
           <image src="../../images/c_icon1.png"></image>
         </view>
-        <view class="foot-item comment3"> <image src="../../images/c_icon2.png"></image></view>
+        <view class="foot-item comment3" bindtap="clickFollowEventBtn"> 
+        <block wx:if="{{isFollow}}">
+       	 	<image src="../../images/c_icon2_after.png"></image>
+       	</block>
+       	<block wx:else>
+       	 	<image src="../../images/c_icon2.png"></image>
+       	</block>
+        </view>
 </view>
+</template>
