--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -1,14 +1,17 @@
 /**index.wxss**/
 .banner-container{
   width: 100%;
-  min-height: 380rpx;
+  height: 150px;
   background: #638395;
 }
 .banner-container image{
   width: 100%;
-  max-height: 380rpx;
+  height: 150px;
 }
-
+.slide-image{  
+    width: 100%; 
+    height:100%; 
+}
 .title-box{
    min-height: 100rpx;
   display: flex;
@@ -202,8 +205,16 @@
 }
 /**下拉自定义的区域**/
 .detail_box{
-  padding: 10rpx;
+  padding: 15rpx 5rpx;
+  margin: 20rpx;
+  line-height:30rpx;
   text-align: center;
+  margin-bottom:120rpx;
+  background: #ffffff;
+  text-align:left;
+}
+.detail_box text{
+	margin:10rpx 0;
 }
 
 
@@ -216,7 +227,7 @@
 }
 .comment_title{
   line-height: 70rpx;
-  font-size: 30rpx;
+  font-size: 36rpx;
   border-bottom: solid 1rpx #d9d9d9;
   margin: 0 0 20rpx 0;
   padding:  0 30rpx;
@@ -282,6 +293,7 @@ top:10rpx;
   line-height: 60rpx;
   border:none;
   margin-left: 80rpx;
+  text-align:left;
   
 }
 .comment2{
@@ -306,4 +318,5 @@ top:10rpx;
   height: 44rpx;
 }
 .comment3{
+  vertical-align: middle;
    width: 80rpx;}
