--- a/pages/myCard/myCard.wxml
+++ b/pages/myCard/myCard.wxml
@@ -1,14 +1,14 @@
-<!--personCenter.wxml-->
+<!--myCard.wxml-->
 <view class="center_top">
 	<view class="center_info">
-		<image src="../../images/icon2.png" class="icon"></image>
+		<image src = "{{photo?photo:'../../images/nomal.jpg'}}" class="icon"></image>
 		<view>上传头像</view>
 	</view>
 </view>
 <view class="personCenter_list mg_top30 border_bottom">
 	<text>姓名</text>
 	<view class="fr">
-	John Doe
+	{{realName}}
 	<text class="wb_arrow_right "></text>
 	</view>
 	
@@ -16,14 +16,14 @@
 <view class="personCenter_list  border_bottom">
 	<text>手机号码</text>
 	<view class="fr">
-		13977788999
+		{{phone}}
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
 <view class="personCenter_list ">
 	<text>个人邮箱</text>
 	<view class="fr">
-		37687985@qq.com
+		<input placeholder="{{email?email:'请输入您的邮箱地址'}}" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
@@ -31,14 +31,14 @@
 <view class="personCenter_list mg_top30 border_bottom">
 	<text>毕业院校</text>
 	<view class="fr" >
-		 <input placeholder="请输入您的毕业院校" />
+		<input placeholder="{{school?school:'请输入您的毕业院校'}}" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
 <view class="personCenter_list ">
-	<text>我的简历</text>
+	<text>我的学历</text>
 	<view class="fr">
-		<input placeholder="请输入您的学历" />
+		<input placeholder="{{degree?degree:'请输入您的学历'}}" />
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
@@ -46,8 +46,9 @@
 <view class="personCenter_list mg_top30 border_bottom">
 	<text>兴趣爱好</text>
 	<view class="fr">
-		<block>打游戏<icon type="clear" size="20" color="#d7dcf5" /></block>
-		<block>打游戏<icon type="clear" size="20" color="#d7dcf5" /></block>
+	<block  wx:for="{{hobbies}}" wx:key="unique">
+		{{item}}<icon type="clear" size="20" color="#d7dcf5" />
+	</block>
 	<text class="wb_arrow_right "></text>
 	</view>
 </view>
@@ -57,7 +58,10 @@
 		<text class="wb_arrow_right "></text>
 	</view>
 </view>
-<button></button>
+<view class="save_button">
+<button type="primary" size="default" 
+         bindtap="default" hover-class="other-button-hover"> 保存 </button>
+		</view>
 <!--底部导航-->
 <import src="../footer/footer.wxml" />
 <template is="footer" data=""/>
