--- a/app.wxss
+++ b/app.wxss
@@ -61,7 +61,7 @@ page{
 	display: flex;
   justify-content: space-between;
 	position: fixed;
-	height: 110rpx;
+	height: 100rpx;
 	width: 100%;
 	background: #ffffff;
   border-top:solid 1rpx #e3e3e3;
@@ -123,7 +123,10 @@ page{
 	}
 
 .center_bg{
-   background: url(../../images/center_bg.png) bottom center no-repeat;
+   /*background-image: url(../../images/center_bg.png);
+   background-size: 100%;
+   background-position: center;
+   background-repeat: no-repeat;*/
    height: 141rpx;
    width: 100%;
    background-size: 100%;
@@ -131,7 +134,10 @@ page{
    bottom: 0;
    left: 0;
 }
-
+.center_bg image{
+ height: 141rpx;
+   width: 100%;
+}
 .center_info{
     padding-bottom:20rpx;
     text-align: center;
@@ -159,10 +165,11 @@ page{
 }
 
 .personCenter_list{
-    padding: 30rpx 46rpx;
+    padding: 30rpx 56rpx 30rpx 30rpx;
     background: #ffffff;
    font-size:32rpx;
     color: #000000;
+    position: relative;
 }
 .personCenter_list image{
     width: 45rpx;
@@ -170,14 +177,38 @@ page{
     vertical-align: middle;
     margin-right: 30rpx;
 }
-.personCenter_list .fr .wb_arrow_right{
-}
+
 .personCenter_list .fr input{
   text-align: right;
   display: inline-block;
   vertical-align: middle;
+  height: 40rpx;
+}
+.personCenter_list .wb_arrow_right{
+  position: absolute;
+  right: 30rpx;
+  top:50%;
+  margin-top:-10rpx;
+
 }
 .personCenter_list .fr icon{
   vertical-align: middle;
   margin:0 10rpx;
+}
+
+.save_button{
+  margin: 50rpx auto 160rpx auto;
+  width: 80%;
+  
+}
+.save_button button{
+  height: 100rpx;
+  line-height: 100rpx;
+  background: -webkit-linear-gradient(left, #fd4748, #c52424);
+	/* Safari 5.1 - 6.0 */
+	background: -o-linear-gradient(right, #fd4748, #c52424);
+	/* Opera 11.1 - 12.0 */
+	background: -moz-linear-gradient(right, #fd4748, #c52424);
+	/* Firefox 3.6 - 15 */
+	background: linear-gradient(to right, #fd4748, #c52424);
 }
