--- a/pages/personCenter/personCenter.wxml
+++ b/pages/personCenter/personCenter.wxml
@@ -19,13 +19,11 @@
 		<image src="../../images/center_bg.png" />
 	</view>
 </view>
-<navigator url="../myCard/myCard">
-<view class="personCenter_list mg_top30">
+<view class="personCenter_list mg_top30" bindtap="toMyCard">
 	<image src="../../images/center-icon1.png"/>
 	<text>我的名片</text>
 	<text class="wb_arrow_right fr"></text>
 </view>
-</navigator>
 <view class="personCenter_list mg_top30 border_bottom">
 	<image src="../../images/center-icon2.png"/>
 	<text>我的发布</text>
