--- a/app.wxss
+++ b/app.wxss
@@ -42,6 +42,19 @@ page{
 	border-bottom: 2px solid transparent;
  
 }
+.wb_arrow_left {
+	display: inline-block;
+	border-left: 1px solid #adadad;
+	border-bottom: 1px solid #adadad;
+	height: 10px;
+	width: 10px;
+	transform: rotate(deg);
+	-webkit-transform: rotate(45deg);
+	/*不加这两个属性三角会比上一个略丑*/
+	 border-right: 2px solid transparent;
+	border-top: 2px solid transparent;
+ 
+}
 .wb_arrow_up {
   margin-top: 10rpx;
   margin-right: 10rpx;
