--- a/pages/verify/verify.wxss
+++ b/pages/verify/verify.wxss
@@ -24,7 +24,7 @@ input{
 	margin: 0 0 20rpx 0;
 }
 .code button{
-	width: 140rpx;
+	padding: 0 20rpx;
 	font-size: 30rpx;
 	background: #fea531;
 	height: 60rpx;
@@ -58,4 +58,49 @@ button[type="primary"][plain] {
     z-index: 5000;
     word-wrap: break-word;
     word-break: break-all;
+}
+
+
+/*弹出窗口*/
+.modal-comfirm {
+	position: fixed;
+	z-index: 9999;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.6);
+}
+
+.modal-comfirm .content {
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	width: 80%;
+	background: white;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	border-radius: 0.3em;
+	text-align: center;
+	min-height: 300rpx;
+	line-height: 50rpx;
+}
+
+.content .img image{
+	margin-top: -75rpx;
+	width: 150rpx;
+	height: 150rpx;
+	border-radius: 100%;
+	border:solid 15rpx #ffffff;
+}
+.content .t1{
+	font-size:50rpx;
+	color:#8ac349;
+	margin-bottom: 40rpx;
+}
+.content .t2{
+	margin: 20rpx 50rpx;
+}
+.content button{
+	margin: 50rpx auto;
+	width: 60%;
 }
