--- a/pages/myPublished/myPublished.wxml
+++ b/pages/myPublished/myPublished.wxml
@@ -8,9 +8,9 @@
 	<view class="t1">
 	 	{{item.name}}
 	</view>
-	<view class="t2"><image src="../../images/d-icon1.png"></image> 06月18号    19: 00</view>
+	<view class="t2"><image src="../../images/d-icon1.png"></image> {{item.year}}年{{item.mouth}}月{{item.date}}号    {{item.startTime}}</view>
 	 <view class="t2">
-	 <image src="../../images/d-icon2.png"></image> 滨江大桥       1.5km
+	 <image src="../../images/d-icon2.png"></image> {{item.address}}       1.5km
 	 <view class="f_button fr">
 	 	<button formType="submit" type="primary" >已发布</button>
 	 </view>
@@ -22,5 +22,6 @@
 <!--
 class="publishing"
 class="no_publish" 
+<icon type="clear" size="20" color="#d7dcf5"/>
 -->
 
