--- a/pages/personCenter/personCenter.wxml
+++ b/pages/personCenter/personCenter.wxml
@@ -24,12 +24,12 @@
 	<text>我的名片</text>
 	<text class="wb_arrow_right fr"></text>
 </view>
-<view class="personCenter_list mg_top30 border_bottom">
+<view class="personCenter_list mg_top30 border_bottom" bindtap="toMyPublic">
 	<image src="../../images/center-icon2.png"/>
 	<text>我的发布</text>
 	<text class="wb_arrow_right fr"></text>
 </view>
-<view class="personCenter_list ">
+<view class="personCenter_list " bindtap="toMyFollows">
 	<image src="../../images/center-icon3.png"/>
 	<text>我的关注</text>
 	<text class="wb_arrow_right fr"></text>
