--- a/pages/myCard/myCard.wxml
+++ b/pages/myCard/myCard.wxml
@@ -68,4 +68,4 @@
 </form>
 <!--底部导航-->
 <import src="../footer/footer.wxml" />
-<template is="footer" data=""/>
+<template is="footer" data="{{...footerConfig}}"/>
