--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -5,7 +5,7 @@
         autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">  
       <block wx:for="{{pictureUrls}}" wx:key="unique">  
         <swiper-item>  
-            <image src="{{item}}" class="slide-image" width="100%" height="100%"/>  
+            <image mode="aspectFit" src="{{item}}" class="slide-image" width="100%" height="100%"/>  
         </swiper-item>  
       </block>  
 </swiper>
@@ -13,7 +13,7 @@
 
 <!-- 循环modules -->
 <block  wx:for="{{modules}}" wx:key="unique">
-<template is="{{item.moduleType}}" data="{{...detail}}"/>
+<template is="{{item.moduleType}}" data="{{...detail, ...item}}"/>
 </block >
 
 <!--事件投票模块 moduleType :1-->
@@ -100,6 +100,7 @@
 
 <!--事件投票模块 moduleType :4-->
 <template name="4">
+<navigator url="../voteModule/voteModule?moduleId={{moduleId}}">
 <view class="model">
   <view class="model-left ">
      <image src="../../images/d-icon3.png"></image>
@@ -112,10 +113,12 @@
    <text class="wb_arrow_right"></text>
    </view>
 </view>
+</navigator>
 </template>
 
 <!--问卷调查模块 moduleType:5-->
 <template name="5">
+<navigator url="../testModule/testModule?moduleId={{moduleId}}">
 <view class="model">
   <view class="model-left">
      <image src="../../images/d-icon4.png"></image>
@@ -127,6 +130,7 @@
    <text class="wb_arrow_right"></text>
    </view>
 </view>
+</navigator>
 </template>
 
 <!--事件评价模块 moduleType:6-->
@@ -154,9 +158,9 @@
 <!--此处为自定义图文详情内容区-->
 <view class="detail_box" hidden="{{isShowBottom ? true : false}}">
 <block  wx:for="{{description.data.paragraphs}}" wx:key="unique">
-	<view wx:if="{{item.type==1}}" ><text>{{item.value}}</text></view>
-	<view wx:if="{{item.type==2}}">
-		 <image src="{{item.value}}" width="100%" height="100%"/> 
+	<view wx:if="{{item.type==1}}" class="detail_box_p"><text>{{item.value}}</text></view>
+	<view wx:if="{{item.type==2}}" class="detail_box_p">
+		 <image src="{{item.value}}" mode="aspectFill"/> 
 	</view>
 </block>
 </view>
@@ -167,10 +171,10 @@
 <view class="comment-container">
  <view class="comment_title">评论<text>（{{commentData.totalCount}}）</text></view>
 
-<block  wx:for="{{commentData.commentsList}}" wx:key="unique">
+<block  wx:for="{{commentData.commentList}}" wx:key="unique">
  <view class="comment-box">
   <view class="comment-left">
-    <image src="{{item.icon}}"></image>
+    <image src="{{item.avatar}}"></image>
     <text>{{item.nick}}</text>
     <time class="fr">{{item.createAt}}</time>
   </view>
@@ -197,12 +201,14 @@
 <!--底部浮动评论输入框-->
 
 <view class="footer_container mg20">
+        <navigator url="../commentSubmit/commentSubmit?moduleId={{moduleId}}">
         <view class="foot-item comment1">
           <view class="input_box">
            <image src="../../images/c_icon3.png"></image>
              <input placeholder="写评论…"  placeholder-class="String"/>
            </view>
         </view>
+        </navigator>
         <view class="foot-item comment2">
           <text class="comment_num">132</text>
           <image src="../../images/c_icon1.png"></image>
